happy-soup/unpackaged/unpackaged/objects/ResourceRequest__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>